Auto reformat and add missing annotation